fixing overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body{
-   width: 100vw;
+   width: 100;
    height: 100vh;
    background-color: var(--black);
 }
